--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^25.2.3",
     "@types/node": "^12.20.47",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "jwt-decode": "^3.1.2",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1"
+    "@types/react-dom": "^18.0.1",
+    "axios-mock-adapter": "^1.20.0"
   }
 }
