--- a/app/package.json
+++ b/app/package.json
@@ -16,12 +16,14 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "jwt-decode": "^3.1.2",
+    "observable-hooks": "^4.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^3.11.0",
     "react-query": "^3.38.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "rxjs": "^7.5.5",
     "typescript": "^4.6.3",
     "web-vitals": "^0.2.4"
   },
